# typecast-api-mcp-server-sample

./: README.md  pyproject.toml  requirements.txt
app/: main.py  server.py
