[project]
name = "typecast-api-mcp-server"
version = "0.1.0"
description = "MCP Server for typecast-api"
authors = [
    { name = "Hyunseung Lee", email = "hyunseung@neosapience.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp",
    "httpx",
    "sounddevice",
    "soundfile",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
typecast-api-mcp-server = "app.main:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build]
include = [
    "app/**/*.py",
    "README.md",
    "LICENSE",
]
